<resources>
    <string name="app_name">Food Good</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>


    <string name="editEmail">Введите email</string>
    <string name="editPassword">Пароль</string>
    <string name="editValidatePassword">Повторите пароль</string>
    <string name="loginText">Войти</string>
    <string name="registerText">Регистрация</string>
    <string name="noLoginText">У вас еще нет аккаунта?</string>
    <string name="inBasket">В корзину</string>
    <string name="payOrderText">Оплатить</string>


    <!-- Place search dialog -->
    <string name="cancel">Назад</string>
    <string name="ok">Выбрать</string>
    <string name="enter_location_hint">Введите город</string>
    <string name="location">Местоположение</string>
    <string name="auth">Авторизация</string>
    <string name="registration">Регистрация</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Other_user">Сменить пользователя</string>

    <!-- Basket -->
    <string name="Basket">Корзина</string>
    <string name="title_activity_maps">Map</string>

    <string name="Name">Имя</string>
    <string name="Mail">Почта</string>
    <string name="City">Город</string>
    <string name="Bonus">Бонусы</string>
    <string name="Delete">Удалить</string>
    <string name="app_title">Рестораны</string>
    <string name="phone_number">Номер телефона</string>
    <string name="end_register">Завершить регистрацию</string>
    <string name="other_users_detail">Дополнительная информация</string>
    <string name="min_sum_buy">Мин. сумма покупки:</string>
    <string name="Delivery_Sum">Стоимость доставки:</string>

</resources>
