<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.food_good.lilsem.food_good.LoginActivity"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:gravity="center"
        android:minHeight="?android:attr/actionBarSize">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/auth"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />
    </android.support.design.widget.AppBarLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/fg_logo"
        android:layout_below="@+id/linearLayout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView3"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/et_corners"
            android:freezesText="false"
            android:hint="@string/editEmail"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textColorLink="?attr/editTextColor"
            android:textSize="17sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:id="@+id/etPassword"
            android:hint="@string/editPassword"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:fontFamily="sans-serif"
            android:background="@drawable/et_corners"
            android:textColorLink="?attr/editTextColor"
            android:layout_above="@+id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:textSize="17sp"
            android:maxLines="1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/btnLogin"
            android:textSize="17sp"
            android:text="@string/loginText"
            android:textColor="@color/colorWhite"
            android:background="@drawable/btn_corners"
            android:radius="20px"
            android:layout_above="@+id/twNoAccount"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="120dp"
            android:layout_marginTop="40dp"/>

        <TextView
            android:id="@+id/twNoAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnRegister"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/noLoginText"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="15sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/btnRegister"
            android:textSize="17sp"
            android:text="@string/registerText"
            android:textColor="@color/colorWhite"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/btn_corners"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:layout_marginTop="10dp"/>



</LinearLayout>>
</RelativeLayout>
