<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_other_info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.food_good.lilsem.food_good.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:gravity="center"
            android:minHeight="?android:attr/actionBarSize">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/other_users_detail"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"/>
        </android.support.design.widget.AppBarLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:srcCompat="@drawable/fg_logo"
        android:scaleType="centerCrop"
        android:layout_below="@+id/linearLayout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView3"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etNameUser"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/imageView3"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/et_corners"
            android:freezesText="false"
            android:hint="@string/Name"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textColorLink="?attr/editTextColor"
            android:textSize="17sp"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/etValidateEmail"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_corners"
            android:fontFamily="sans-serif"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textColorLink="?attr/editTextColor"
            android:textSize="17sp"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/etLocation"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_corners"
            android:hint="@string/location"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textColorLink="?attr/editTextColor"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btnValidateUserInfo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/btn_corners"
            android:text="@string/end_register"
            android:textColor="@color/colorWhite"
            android:textSize="17sp"/>
    </LinearLayout>
    >
</RelativeLayout>
